<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40"
        android:layout_marginTop="@dimen/between_mppd_23">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/findpassword_GoBackBtn"
            android:layout_marginLeft="@dimen/between_mppd_25"
            android:src="@mipmap/go_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSize_16"
            android:layout_gravity="center"
            android:textColor="@color/black_color"
            android:text="@string/recover_password"
            android:id="@+id/findpassword_TitleText"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0_5"
        android:layout_marginTop="@dimen/between_mppd_45"
        android:background="@color/gray"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40"
         android:inputType="textEmailAddress"
        android:hint="@string/input_email"
        android:paddingLeft="@dimen/between_mppd_16"
        android:ems="10"
        android:textSize="@dimen/textSize_13"
        android:id="@+id/findpassword_EmailEdit"
        android:background="@null"
         android:layout_marginLeft="@dimen/between_mppd_1"
        android:layout_marginRight="@dimen/between_mppd_1" />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_0_5"
        android:background="@color/gray"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40"
        android:background="@color/gray"
        android:layout_marginTop="@dimen/between_mppd_10">

        <EditText
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/findpassword_CodeEidt"
            android:textSize="@dimen/textSize_13"
            android:background="@color/white_color"
            android:hint="@string/input_code"
            android:paddingLeft="@dimen/between_mppd_16"
            android:layout_marginLeft="@dimen/between_mppd_0_5"
            android:layout_marginTop="@dimen/between_mppd_0_5"
            android:layout_marginBottom="@dimen/between_mppd_0_5"
            android:layout_weight="5" />

        <TextView
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/findpassword_GetCodeBtn"
            android:gravity="center"
            android:textSize="@dimen/textSize_13"
            android:text="@string/get_code"
             android:background="@color/white_color"
            android:textColor="@drawable/gray_select"
            android:layout_marginRight="@dimen/between_mppd_0_5"
            android:layout_marginLeft="@dimen/between_mppd_0_5"
            android:layout_marginTop="@dimen/between_mppd_0_5"
            android:layout_marginBottom="@dimen/between_mppd_0_5"
            android:layout_weight="3" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_40"
        android:text="@string/next_action"
        android:id="@+id/findpassword_NextBtn"
        android:gravity="center"
        android:textSize="@dimen/textSize_16"
        android:layout_marginTop="@dimen/between_mppd_25"
        android:textColor="@drawable/blue_color_select"
        android:layout_gravity="center_horizontal" />
</LinearLayout>